--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
     hikari:
       driver-class-name: org.h2.Driver
-      jdbc-url: jdbc:h2:tcp://localhost/~/spring-batch;mode=mariadb
+      jdbc-url: jdbc:h2:tcp://localhost/~/dev/h2/spring-batch;mode=mariadb
       username: sa
       password:
   jpa:
